# fun-lvgl

./: CMakeLists.txt  prj.conf
boards/: native_sim.overlay
src/: display_thread.c  main.c  sensor_thread.c  zbus_channel.c  zbus_channel.h
